forgot **TL;DR**

--- a/_drafts/2019-07-18-Closures.md
+++ b/_drafts/2019-07-18-Closures.md
@@ -4,7 +4,7 @@ title:  Closures are useful
 tags:   ['JavaScript', 'Design Pattern', 'Closures']
 ---
 
-When only a small portion of your function needs to change, try to encapsulate one level of abstraction above.
+**TL;DR** When only a small portion of your function needs to change, try to encapsulate one level of abstraction above.
 
 ``` javascript
 getSiblingFunc = direction => index => navigateTo(index + direction ? 1 : -1)
