--- a/_drafts/2019-07-18-Closures.md
+++ b/_drafts/2019-07-18-Closures.md
@@ -79,7 +79,7 @@ open()  // $element.state.open === true
 close() // $element.state.open === false
 ```
 
-*Related*: if `Object.assign()` feels a bit obscure to you, I wrote a post about it!
+*Related*: if `Object.assign()` feels a bit obscure to you, I wrote [a post about it]()!
 
 
 
